refactored if/else statements

--- a/main.css
+++ b/main.css
@@ -2,13 +2,13 @@ body {
   background-color: whitesmoke;
 }
 
-.card-body1 {
+/* .card-body1 {
 background-color: darkgoldenrod;
 }
 
 .card-body2 {
 background-color: darkgreen;
-}
+} */
 
 /* 
 .card2 {
